--- a/style.css
+++ b/style.css
@@ -25,14 +25,10 @@
     font-size: 20px;
 }
 
-.copy_right_footer {
-    position: fixed;
-    color: white;
-    bottom: 0;
-    width: 100%;
+h4 {
     background-color: grey;
-    font-size: 20px;
-    text-align: center;
+    color: white;
+    line-height: 2;
 }
 
 canvas {
